--- a/templates/choose-room.page.tmpl
+++ b/templates/choose-room.page.tmpl
@@ -6,9 +6,13 @@
             <div class="col">
                 <h1>Choose a Room</h1>
                 {{$rooms := index .Data "rooms"}}
+
+
+                <ul>
                 {{range $rooms}}
-                    {{.RoomName}}<br>
+                    <li><a href="/choose-room/{{.ID}}">{{.RoomName}}</a></li>
                 {{end}}
+                </ul>
             </div>
         </div>
     </div>
