--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -12,7 +12,7 @@
                 Departure: {{index .StringMap "end_date"}}<br>
                 </p>
 
-                <form method="post" action="" class="" novalidate>
+                <form method="post" action="/make-reservation" class="" novalidate>
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
 
                     <div class="form-group mt-3">
