--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -75,7 +75,12 @@
                     <a class="nav-link" href="/contact">Contact</a>
                 </li>
                 <li class="nav-item">
+                {{/* eq = equal, verificam ca alea 2 sunt egale */}}
+                {{if eq .IsAuthenticated 1}}
+                    <a class="nav-link" href="/user/logout">Logout</a>
+                {{else}}
                     <a class="nav-link" href="/user/login">Login</a>
+                {{end}}
                 </li>
 
             </ul>
