--- a/templates/admin-reservation-show.page.tmpl
+++ b/templates/admin-reservation-show.page.tmpl
@@ -14,7 +14,7 @@
             <strong>Room:</strong> {{$res.Room.RoomName}}<br>
         </p>
 
-        <form action="/" method="post" class="" novalidate>
+         <form action="/admin/reservations/{{$src}}/{{$res.ID}}" method="post" class="" novalidate>
             <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
             <input type="hidden" name="year" value="{{index .StringMap "year"}}">
             <input type="hidden" name="month" value="{{index .StringMap "month"}}">
