handling calendar done

--- a/templates/admin-reservations-calendar.page.tmpl
+++ b/templates/admin-reservations-calendar.page.tmpl
@@ -10,26 +10,32 @@
     {{$dim := index .IntMap "days_in_month"}}
     {{$curMonth := index .StringMap "this_month"}}
     {{$curYear := index .StringMap "this_month_year"}}
+
     <div class="col-md-12">
 
-       <div class="text-center">
+        <div class="text-center">
             <h3>{{formatDate $now "January"}} {{formatDate $now "2006"}}</h3>
         </div>
-        
-        <div class="clearfix">
-            <div class="float-left">
-                <a class="btn btn-sm btn-outline-secondary"
-                   href="/admin/reservations-calendar?y={{index .StringMap "last_month_year"}}&m={{index .StringMap "last_month"}}">&lt;&lt;</a>
-            </div>
 
-            <div class="float-right">
-                <a class="btn btn-sm btn-outline-secondary"
-                   href="/admin/reservations-calendar?y={{index .StringMap "next_month_year"}}&m={{index .StringMap "next_month"}}">&gt;&gt;</a>
-            </div>
+        <div class="float-left">
+            <a class="btn btn-sm btn-outline-secondary"
+               href="/admin/reservations-calendar?y={{index .StringMap "last_month_year"}}&m={{index .StringMap "last_month"}}">&lt;&lt;</a>
         </div>
 
-         {{range $rooms}}
-            {{$roomID := .ID}}
+        <div class="float-right">
+            <a class="btn btn-sm btn-outline-secondary"
+               href="/admin/reservations-calendar?y={{index .StringMap "next_month_year"}}&m={{index .StringMap "next_month"}}">&gt;&gt;</a>
+        </div>
+
+        <div class="clearfix"></div>
+
+        <form method="post" action="/admin/reservations-calendar">
+            <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+            <input type="hidden" name="m" value="{{index .StringMap "this_month"}}">
+            <input type="hidden" name="y" value="{{index .StringMap "this_month_year"}}">
+
+            {{range $rooms}}
+                {{$roomID := .ID}}
                 {{$blocks := index $.Data (printf "block_map_%d" .ID)}}
                 {{$reservations := index $.Data (printf "reservation_map_%d" .ID)}}
 
@@ -72,5 +78,13 @@
 
 
             {{end}}
+
+            <hr>
+
+            <input type="submit" class="btn btn-primary" value="Save Changes">
+
+
+        </form>
+
     </div>
 {{end}}
