--- a/templates/admin-reservation-show.page.tmpl
+++ b/templates/admin-reservation-show.page.tmpl
@@ -84,17 +84,19 @@
 {{define "js"}}
     {{$src := index .StringMap "src"}}
     <script>
-       function processRes(id) {
+        function processRes(id) {
             attention.custom({
-            icon: 'warning',
-            msg: 'Are you sure?',
-            callback: function (result) {
-                if (result !== false) {
-                    window.location.href = "/admin/process-reservation/{{$src}}/" + id + "/do";
+                icon: 'warning',
+                msg: 'Are you sure?',
+                callback: function (result) {
+                    if (result !== false) {
+                        window.location.href = "/admin/process-reservation/{{$src}}/"
+                            + id
+                            + "/do?y={{index .StringMap "year"}}&m={{index .StringMap "month"}}";
+                    }
                 }
-            }
-        });
-    }
+            })
+        }
 
         function deleteRes(id) {
             attention.custom({
@@ -102,7 +104,9 @@
                 msg: 'Are you sure?',
                 callback: function (result) {
                     if (result !== false) {
-                        window.location.href = "/admin/delete-reservation/{{$src}}/"+ id + "/do";
+                        window.location.href = "/admin/delete-reservation/{{$src}}/"
+                            + id
+                            + "/do?y={{index .StringMap "year"}}&m={{index .StringMap "month"}}";
                     }
                 }
             })
