--- a/templates/admin-new-reservations.page.tmpl
+++ b/templates/admin-new-reservations.page.tmpl
@@ -14,28 +14,30 @@
 
         <table class="table table-striped table-hover" id="new-res">
             <thead>
-            <tr>
-                <th>ID</th>
-                <th>Last Name</th>
-                <th>Room</th>
-                <th>Arrival</th>
-                <th>Departure</th>
-            </tr>
+                <tr>
+                    <th>ID</th>
+                    <th>Last Name</th>
+                    <th>Room</th>
+                    <th>Arrival</th>
+                    <th>Departure</th>
+                    <th>Nights</th> <!-- New column for Nights -->
+                </tr>
             </thead>
             <tbody>
-            {{range $res}}
-                <tr>
-                    <td>{{.ID}}</td>
-                    <td>
-                        <a href="/admin/reservations/new/{{.ID}}/show">
-                            {{.LastName}}
-                        </a>
-                    </td>
-                    <td>{{.Room.RoomName}}</td>
-                    <td>{{humanDate .StartDate}}</td>
-                    <td>{{humanDate .EndDate}}</td>
-                </tr>
-            {{end}}
+                {{range $res}}
+                    <tr>
+                        <td>{{.ID}}</td>
+                        <td>
+                            <a href="/admin/reservations/new/{{.ID}}/show">
+                                {{.LastName}}
+                            </a>
+                        </td>
+                        <td>{{.Room.RoomName}}</td>
+                        <td>{{humanDate .StartDate}}</td>
+                        <td>{{humanDate .EndDate}}</td>
+                        <td>{{nightsBetween .StartDate .EndDate}} nights</td>
+                    </tr>
+                {{end}}
             </tbody>
         </table>
     </div>
@@ -47,7 +49,7 @@
         document.addEventListener("DOMContentLoaded", function () {
             const dataTable = new simpleDatatables.DataTable("#new-res", {
                 select: 3, sort: "desc",
-            })
-        })
+            });
+        });
     </script>
 {{end}}
