--- a/templates/contact.page.tmpl
+++ b/templates/contact.page.tmpl
@@ -4,7 +4,27 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>This is the contact page</h1>
+                <h1 class="mt-3">Contact Us</h1>
+                <hr>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2274.1502062257925!2d26.056963!3d44.433493!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b1fe2d8e3455d1%3A0x6a5fc4e9cde6c92a!2sBucurești%20Sectorul%206!5e0!3m2!1sen!2sro!4v1708383793775!5m2!1sen!2sro&markers=44.433493,26.056963"
+                            width="100%" height="500" frameborder="0" style="border:0; border-radius: 10px; box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);" allowfullscreen="" aria-hidden="false" tabindex="0">
+                        </iframe>
+                    </div>
+
+                    <div class="col-md-6 text-center">
+
+                        <strong>Fort Smythe Bed &amp; Breakfast</strong><br>
+                        Iuliu Maniu 105<br>
+                        Sector 6, Bucuresti<br>
+                        Romania<br>
+                        (+40)787774397<br>
+                        <a href="mailto:flavius.paltin@yahoo.com">flavius.paltin@yahoo.com</a>
+
+                    </div>
+                </div>
 
             </div>
         </div>
