--- a/templates/generals.page.tmpl
+++ b/templates/generals.page.tmpl
@@ -56,9 +56,9 @@
     document.getElementById("check-availability-button").addEventListener("click", function () {
         let html = `
         <form id="check-availability-form" action="" method="post" novalidate class="needs-validation">
-            <div class="form-row">
+            <div class="row">
                 <div class="col">
-                    <div class="form-row" id="reservation-dates-modal">
+                    <div class="row" id="reservation-dates-modal">
                         <div class="col">
                             <input disabled required class="form-control" type="text" name="start" id="start" placeholder="Arrival">
                         </div>
@@ -87,32 +87,37 @@
                 document.getElementById("end").removeAttribute("disabled");
             },
             callback: function(result) {
-                let form = document.getElementById("check-availability-form");
-                let formData = new FormData(form);
-                formData.append("csrf_token", "{{.CSRFToken}}");
-                formData.append("room_id","1")
-                fetch('/search-availability-json', {
-                    method: "post",
-                    body: formData,
-                })
-                    .then(response => response.json())
-                    .then(data => {
-                        if(data.ok){
-                            attention.custom({
-                                icon: 'success',
-                                showConfirmButton: false,
-                                msg: '<p>Room is available!<p>'
-                                    + '<p><a href="/book-room?id=' + data.room_id + '&s=' + data.start_date + '&e=' + data.end_date + '" class ="btn btn-primary">'
-                                    + 'Book now!</a></p>',
-                            })
-                            } else {
-                                attention.error({
-                                    msg:"No availability",
-                                })
-                            }
-        
-                    })
+            if (!result) {
+                return;
             }
+
+            let form = document.getElementById("check-availability-form");
+            let formData = new FormData(form);
+            formData.append("csrf_token", "{{.CSRFToken}}");
+            formData.append("room_id", "1");
+
+            fetch('/search-availability-json', {
+                method: "post",
+                body: formData,
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.ok) {
+                    attention.custom({
+                        icon: 'success',
+                        showConfirmButton: false,
+                        msg: '<p>Room is available!<p>'
+                            + '<p><a href="/book-room?id=' + data.room_id + '&s=' + data.start_date + '&e=' + data.end_date + '" class ="btn btn-primary">'
+                            + 'Book now!</a></p>',
+                    });
+                } else {
+                    attention.error({
+                        msg: "No availability",
+                    });
+                }
+            });
+        }
+
         });
     })
 </script>
