--- a/templates/login.page.tmpl
+++ b/templates/login.page.tmpl
@@ -16,7 +16,7 @@
                         {{end}}
                         <input class="form-control {{with .Form.Errors.Get "email"}} is-invalid {{end}}"
                                id="email" autocomplete="off" type='email'
-                               name='email' value="{{index .StringMap "email"}}" required>
+                               name='email' value="" required>
                     </div>
 
                     <div class="form-group">
