--- a/templates/majors.page.tmpl
+++ b/templates/majors.page.tmpl
@@ -54,9 +54,9 @@
     document.getElementById("check-availability-button").addEventListener("click", function () {
         let html = `
         <form id="check-availability-form" action="" method="post" novalidate class="needs-validation">
-            <div class="form-row">
+            <div class="row">
                 <div class="col">
-                    <div class="form-row" id="reservation-dates-modal">
+                    <div class="row" id="reservation-dates-modal">
                         <div class="col">
                             <input disabled required class="form-control" type="text" name="start" id="start" placeholder="Arrival">
                         </div>
@@ -85,6 +85,9 @@
                 document.getElementById("end").removeAttribute("disabled");
             },
             callback: function(result) {
+                if (!result) {
+                    return;
+                }      
                 let form = document.getElementById("check-availability-form");
                 let formData = new FormData(form);
                 formData.append("csrf_token", "{{.CSRFToken}}");
